--- a/.gitignore
+++ b/.gitignore
@@ -5,22 +5,8 @@
 *.ear
 hs_err_pid*
 
-## Eclipse
-.classpath
-.project
-.metadata
-.recommenders
-**/bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-.externalToolBuilders/
-*.launch
+## Robovm
+robovm-build/
 
 ## GWT
 war/
@@ -37,7 +23,9 @@ www-test/
 ## Android Studio and Intellij and Android in general
 android/libs/armeabi/
 android/libs/armeabi-v7a/
+android/libs/arm64-v8a/
 android/libs/x86/
+android/libs/x86_64/
 android/gen/
 .idea/
 *.ipr
@@ -45,6 +33,22 @@ android/gen/
 *.iml
 out/
 com_crashlytics_export_strings.xml
+
+## Eclipse
+.classpath
+.project
+.metadata
+**/bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.externalToolBuilders/
+*.launch
 
 ## NetBeans
 **/nbproject/private/
@@ -63,3 +67,4 @@ build/
 
 ## OS Specific
 .DS_Store
+Thumbs.db
